<resources>
    <string name="app_name">WeCare</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="phone_number_input_hint">Phone Number</string>
    <string name="verify_number_button">Verify Phone Number</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_otp_button">Continue</string>
    <string name="otp_input_hint">-</string>
    <string name="otp_instruction">Enter the 6-digit code that we sent to</string>
    <string name="resend_code_tv">Resend Code</string>
    <string name="empty_input_error">This field should not be empty</string>
    <string name="enter_valid_otp">Enter Valid OTP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="nav_other_title">Other</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_security_code">Enter Security Code</string>
    <string name="mandatory_verification_message">Verification is Mandatory</string>
    <string name="choose_images_button">Choose Images</string>
    <string name="medicine_name_hint">Medicine</string>
    <string name="expiry_date_tv_hint">dd/mm/yyyy</string>
    <string name="action_save">Save</string>
    <string name="expiry_date_error">Select an Expiry Date</string>
    <string name="no_image_selected_error">Select at least 1 image</string>
    <string name="editingActivityBackButtonAlert">Discard your changes and quit editing?</string>
    <string name="keep_editing">KEEP EDITING</string>
    <string name="discard">DISCARD</string>
    <string name="add_medicine_label">Add Medicine</string>
    <string name="radio_tablet">Tablet</string>
    <string name="radio_syrup">Syrup</string>
    <string name="quantity_hint">Quantity</string>
    <string name="expiry_date_tv">Expiry Date:</string>
    <string name="tablets_string">tablets</string>
    <string name="ml_string">mL</string>
    <string name="storage_permission_rationale">Manually give storage permission from settings.</string>
</resources>
