<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:scrollbars="none"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:padding="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                    android:hint="@string/medicine_name_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                        android:id="@+id/medicine_name_input"
                        android:inputType="textCapWords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                    android:layout_marginTop="18dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RelativeLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                            android:hint="@string/quantity_hint"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                                android:id="@+id/quantity_input"
                                android:inputType="number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                            android:id="@+id/quantity_unit"
                            android:text="@string/tablets_string"
                            android:paddingBottom="8dp"
                            android:layout_marginEnd="4dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentBottom="true"
                            android:textColor="@android:color/black"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </RelativeLayout>

                <RadioGroup
                        android:id="@+id/radio_group_quantity"
                        android:orientation="vertical"
                        android:checkedButton="@id/radio_tablet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/radio_tablet"
                            android:text="@string/radio_tablet"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <android.support.v7.widget.AppCompatRadioButton
                            android:id="@+id/radio_syrup"
                            android:text="@string/radio_syrup"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="22dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/expiry_date_tv"
                        android:fontFamily="monospace"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:id="@+id/expiry_date_tv"
                        android:padding="8dp"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:layout_margin="8dp"
                        android:fontFamily="monospace"
                        android:textColor="@android:color/black"
                        android:hint="@string/expiry_date_tv_hint"
                        android:background="@drawable/expiry_date_bg"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <android.support.v4.view.ViewPager
                    android:id="@+id/image_slider"
                    android:visibility="gone"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">
            </android.support.v4.view.ViewPager>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/choose_images_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_add_a_photo_white_24dp"/>

</RelativeLayout>