<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.PhoneNumberAuthActivity">

    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:id="@+id/verification_progress"
            android:indeterminate="true"
            android:visibility="invisible"
            android:layout_marginTop="-8dp"
            android:progressTint="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

    <LinearLayout
            android:id="@+id/verify_number_group"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.hbb20.CountryCodePicker
                    android:id="@+id/country_code_picker"
                    android:layout_gravity="bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
            </com.hbb20.CountryCodePicker>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="16dp"
                    android:hint="@string/phone_number_input_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number_input"
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
                android:id="@+id/verify_number_button"
                android:layout_marginTop="32dp"
                android:text="@string/verify_number_button"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/verify_otp_group"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/otp_instruction"
                android:textSize="16sp"
                android:layout_gravity="start"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/phone_number_tv"
                android:textSize="16sp"
                android:textColor="#4A85E3"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp_input_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/OTPInputEditText"/>

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp_input_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/OTPInputEditText"/>

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp_input_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/OTPInputEditText"/>

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp_input_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/OTPInputEditText"/>

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp_input_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/OTPInputEditText"/>

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/otp_input_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/OTPInputEditText"/>


        </LinearLayout>

        <Button
                android:id="@+id/verify_otp_button"
                android:layout_marginTop="12dp"
                android:text="@string/verify_otp_button"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/resend_code_TV"
                android:padding="16dp"
                android:textSize="18sp"
                android:focusable="true"
                android:clickable="false"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Resend 00:"/>

    </LinearLayout>
</LinearLayout>